tests/examples/snapshots/fail/sorts/sort_inference_error.fly.cvc4.snap
---
source: tests/test_examples.rs
description: "--expect-fail --all-solvers -- verify tests/examples/fail/sorts/sort_inference_error.fly"
expression: combined_stdout_stderr
---

======== STDERR: ===========
sort checking error:
error: sort inference isn't supported yet
  ┌─ tests/examples/fail/sorts/sort_inference_error.fly:6:1
  │
6 │ assert forall x. x = x
  │ ^^^^^^^^^^^^^^^^^^^^^^


